@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-control-center/gnome-control-center-3.2.1.ebuild,v 1.3 2011/11/28 18:19:32 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-control-center/gnome-control-center-3.2.1.ebuild,v 1.4 2012/02/14 04:55:31 tetromino Exp $
 
 EAPI="4"
 GCONF_DEBUG="yes"
@@ -65,6 +65,7 @@ COMMON_DEPEND="
 RDEPEND="${COMMON_DEPEND}
 	app-admin/apg
 	sys-apps/accountsservice
+	x11-themes/gnome-icon-theme-symbolic
 	cups? ( net-print/cups-pk-helper )
 
 	!<gnome-base/gdm-2.91.94
