@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-control-center
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-control-center/ChangeLog,v 1.95 2011/11/28 18:19:32 tetromino Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-control-center/ChangeLog,v 1.96 2012/02/14 04:55:31 tetromino Exp $
+
+  14 Feb 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gnome-control-center-3.2.1.ebuild, gnome-control-center-3.2.2.ebuild:
+  Add missing dependency on gnome-icon-theme-symbolic (bug #403503).
 
   28 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
   gnome-control-center-3.2.1.ebuild, gnome-control-center-3.2.2.ebuild:
